// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.taskscheduler";
option java_outer_classname = "TaskSchedulerProto";
option objc_class_prefix = "TSC";

package taskscheduler;

// The greeting service definition.
service TaskScheduler {
  // Sends a greeting
  rpc RegisterWorker (RegistrationRequest) returns (RegistrationReply) {}
  rpc GetTask (RequestContext) returns (Task) {}
  rpc SendHeartBeat (CallerData) returns (HeartBeatReply) {}
}

// The request message containing the user's name.
message RegistrationRequest {
  string key = 1;
}

// The reply to registration
message RegistrationReply {
  string auth_token = 1;
}

// Worker info
message RequestContext {
  string auth_token = 1;
}

message CallerData {
    int64 task_received = 1;
    int64 task_completed = 2;
    RequestContext context = 3;
}

// Task as a set of orders
message Task {
  repeated TransferOrder orders = 1;
}

message TransferOrder {
  int64 id = 1;
}

message HeartBeatReply {

}